--- a/vyne-query-service/pom.xml
+++ b/vyne-query-service/pom.xml
@@ -105,10 +105,32 @@
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-webflux</artifactId>
       </dependency>
+
       <dependency>
          <groupId>org.springframework.boot</groupId>
-         <artifactId>spring-boot-starter-web</artifactId>
+         <artifactId>spring-boot-starter-reactor-netty</artifactId>
       </dependency>
+
+
+      <!--
+      <dependency>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-starter-websocket</artifactId>
+      </dependency>
+      -->
+
+      <dependency>
+         <groupId>org.yeauty</groupId>
+         <artifactId>netty-websocket-spring-boot-starter</artifactId>
+         <version>0.10.0</version>
+      </dependency>
+
+      <dependency>
+         <groupId>javax.websocket</groupId>
+         <artifactId>javax.websocket-api</artifactId>
+         <version>1.1</version>
+      </dependency>
+
       <dependency>
          <groupId>org.springframework.data</groupId>
          <artifactId>spring-data-r2dbc</artifactId>
