--- a/vyne-query-service/pom.xml
+++ b/vyne-query-service/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
       <groupId>io.vyne</groupId>
       <artifactId>platform</artifactId>
@@ -89,14 +90,14 @@
          <groupId>net.logstash.logback</groupId>
          <artifactId>logstash-logback-encoder</artifactId>
       </dependency>
+      <!--      <dependency>-->
+      <!--         <groupId>org.springframework.boot</groupId>-->
+      <!--         <artifactId>spring-boot-starter-data-jpa</artifactId>-->
+      <!--      </dependency>-->
       <dependency>
          <groupId>org.springframework.boot</groupId>
-         <artifactId>spring-boot-starter-data-jpa</artifactId>
+         <artifactId>spring-boot-starter-data-r2dbc</artifactId>
       </dependency>
-<!--      <dependency>-->
-<!--         <groupId>org.springframework.boot</groupId>-->
-<!--         <artifactId>spring-boot-starter-data-r2dbc</artifactId>-->
-<!--      </dependency>-->
       <dependency>
          <groupId>org.springframework.cloud</groupId>
          <artifactId>spring-cloud-starter-config</artifactId>
@@ -109,32 +110,22 @@
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-web</artifactId>
       </dependency>
-<!--      <dependency>-->
-<!--         <groupId>org.springframework.data</groupId>-->
-<!--         <artifactId>spring-data-r2dbc</artifactId>-->
-<!--         <version>1.1.1.RELEASE</version>-->
-<!--      </dependency>-->
+      <dependency>
+         <groupId>org.springframework.data</groupId>
+         <artifactId>spring-data-r2dbc</artifactId>
+      </dependency>
       <dependency>
          <groupId>com.h2database</groupId>
          <artifactId>h2</artifactId>
       </dependency>
-<!--      <dependency>-->
-<!--         <groupId>io.r2dbc</groupId>-->
-<!--         <artifactId>r2dbc-h2</artifactId>-->
-<!--         <version>0.8.4.RELEASE</version>-->
-<!--      </dependency>-->
-<!--      <dependency>-->
-<!--         <groupId>io.r2dbc</groupId>-->
-<!--         <artifactId>r2dbc-postgresql</artifactId>-->
-<!--      </dependency>-->
-<!--      <dependency>-->
-<!--         <groupId>org.flywaydb</groupId>-->
-<!--         <artifactId>flyway-core</artifactId>-->
-<!--      </dependency>-->
-<!--      <dependency>-->
-<!--         <groupId>org.postgresql</groupId>-->
-<!--         <artifactId>postgresql</artifactId>-->
-<!--      </dependency>-->
+      <dependency>
+         <groupId>io.r2dbc</groupId>
+         <artifactId>r2dbc-h2</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>org.flywaydb</groupId>
+         <artifactId>flyway-core</artifactId>
+      </dependency>
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>vyne</artifactId>
