queyr history list now shows

--- a/cask/pom.xml
+++ b/cask/pom.xml
@@ -163,6 +163,17 @@
           <version>1.5.0</version>
           <scope>test</scope>
        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-stdlib-jdk8</artifactId>
+            <version>${kotlin.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-test</artifactId>
+            <version>${kotlin.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -172,6 +183,22 @@
                 <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-maven-plugin</artifactId>
                 <version>${kotlin.version}</version>
+                <executions>
+                    <execution>
+                        <id>compile</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>test-compile</id>
+                        <phase>test-compile</phase>
+                        <goals>
+                            <goal>test-compile</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
                     <compilerPlugins>
                         <!-- Or "spring" for the Spring support -->
@@ -180,6 +207,7 @@
                         <plugin>no-arg</plugin>
                     </compilerPlugins>
 
+                    <jvmTarget>1.8</jvmTarget>
                 </configuration>
 
                 <dependencies>
