--- a/vyne-core-types/pom.xml
+++ b/vyne-core-types/pom.xml
@@ -14,6 +14,10 @@
 
    <dependencies>
       <dependency>
+         <groupId>org.jetbrains.kotlinx</groupId>
+         <artifactId>kotlinx-coroutines-core</artifactId>
+      </dependency>
+      <dependency>
          <groupId>com.fasterxml.jackson.core</groupId>
          <artifactId>jackson-annotations</artifactId>
       </dependency>
