WIP: concurrent execution of project

--- a/vyne-query-service/src/main/resources/application.yml
+++ b/vyne-query-service/src/main/resources/application.yml
@@ -57,18 +57,18 @@ hystrix:
 
 logging:
    level:
-      org.springframework: WARN
-      com.netflix.discovery.InstanceInfoReplicator: ERROR
+      #org.springframework: WARN
+      #com.netflix.discovery.InstanceInfoReplicator: ERROR
 
       #       These two netflix loggers are REALLY noisy - it logs errors on startup, complaining it can't connect .. generally those errors are ignorable
       #        But, in some cases we may care -- so consider turning this back on.
-      com.netflix.discovery.shared.transport.decorator.RedirectingEurekaHttpClient: OFF
-      com.netflix.discovery.DiscoveryClient: OFF
-      org.apache.http: OFF
-      com.netflix: WARN
-      com.hazelcast: WARN
-      io.vyne: INFO
-      org.apache.catalina: WARN
+      #com.netflix.discovery.shared.transport.decorator.RedirectingEurekaHttpClient: OFF
+      #com.netflix.discovery.DiscoveryClient: OFF
+      #org.apache.http: OFF
+      #com.netflix: WARN
+      #com.hazelcast: WARN
+      #io.vyne: INFO
+      #org.apache.catalina: WARN
 eureka:
    client:
       #      registryFetchIntervalSeconds: 1
