Fixed vyne-spring RestTemplateInvoker tests

--- a/vyne-spring/pom.xml
+++ b/vyne-spring/pom.xml
@@ -113,5 +113,24 @@
          <artifactId>kotlinx-coroutines-reactive</artifactId>
       </dependency>
 
+      <dependency>
+         <groupId>com.squareup.okhttp3</groupId>
+         <artifactId>okhttp</artifactId>
+         <version>4.8.1</version>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>com.squareup.okhttp3</groupId>
+         <artifactId>mockwebserver</artifactId>
+         <version>4.8.1</version>
+         <scope>test</scope>
+      </dependency>
+
+      <dependency>
+         <groupId>app.cash.turbine</groupId>
+         <artifactId>turbine-jvm</artifactId>
+         <scope>test</scope>
+      </dependency>
+
    </dependencies>
 </project>
