--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 
       <!-- Used in QueryService -->
       <elasticsearch.version>7.5.2</elasticsearch.version>
+      <kotlin-logging.version>2.0.6</kotlin-logging.version>
 
       <kotlin.compiler.jvmTarget>1.8</kotlin.compiler.jvmTarget>
       <kotlin.version>1.4.30</kotlin.version>
@@ -65,6 +66,13 @@
    </scm>
 
    <dependencies>
+      <dependency>
+      <!-- https://mvnrepository.com/artifact/io.github.microutils/kotlin-logging-jvm -->
+         <groupId>io.github.microutils</groupId>
+         <artifactId>kotlin-logging-jvm</artifactId>
+         <version>${kotlin-logging.version}</version>
+      </dependency>
+
       <dependency>
          <groupId>org.jetbrains.kotlin</groupId>
          <artifactId>kotlin-stdlib-jdk8</artifactId>
