--- a/pipelines/pipelines-orchestrator/pom.xml
+++ b/pipelines/pipelines-orchestrator/pom.xml
@@ -49,6 +49,7 @@
          <groupId>net.logstash.logback</groupId>
          <artifactId>logstash-logback-encoder</artifactId>
       </dependency>
+      <!--
       <dependency>
          <groupId>io.springfox</groupId>
          <artifactId>springfox-swagger2</artifactId>
@@ -57,6 +58,8 @@
          <groupId>io.springfox</groupId>
          <artifactId>springfox-swagger-ui</artifactId>
       </dependency>
+      -->
+
       <dependency>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-actuator</artifactId>
@@ -72,6 +75,13 @@
          <artifactId>spring-boot-starter-test</artifactId>
          <scope>test</scope>
       </dependency>
+      <!-- https://mvnrepository.com/artifact/com.fasterxml/classmate -->
+      <dependency>
+         <groupId>com.fasterxml</groupId>
+         <artifactId>classmate</artifactId>
+         <version>1.5.1</version>
+      </dependency>
+
    </dependencies>
 
 
