Compressing history and enabling lineage

--- a/vyne-query-service/src/main/resources/application.yml
+++ b/vyne-query-service/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
    codec:
       max-in-memory-size: 100MB
    r2dbc:
-      url: r2dbc:h2:file://././vyne-query-history;ACCESS_MODE_DATA=rws
+      url: r2dbc:h2:file://././vyne-query-history;COMPRESS=TRUE
       username: sa
       password:
 vyne:
