Support For Constraint in views

--- a/cask/pom.xml
+++ b/cask/pom.xml
@@ -92,6 +92,11 @@
           <version>${project.version}</version>
        </dependency>
        <dependency>
+          <groupId>com.github.jsqlparser</groupId>
+          <artifactId>jsqlparser</artifactId>
+          <version>4.0</version>
+       </dependency>
+       <dependency>
           <groupId>de.bytefish.pgbulkinsert</groupId>
           <artifactId>pgbulkinsert-core</artifactId>
           <version>7.0.1</version>
