--- a/test-cli/pom.xml
+++ b/test-cli/pom.xml
@@ -13,7 +13,7 @@
 
    <dependencies>
       <dependency>
-         <groupId>lang.taxi</groupId>
+         <groupId>org.taxilang</groupId>
          <artifactId>compiler</artifactId>
       </dependency>
       <dependency>
