--- a/vyne-client/pom.xml
+++ b/vyne-client/pom.xml
@@ -21,7 +21,7 @@
          <version>${project.version}</version>
       </dependency>
       <dependency>
-         <groupId>lang.taxi</groupId>
+         <groupId>org.taxilang</groupId>
          <artifactId>taxi-annotations</artifactId>
       </dependency>
       <dependency>
