--- a/schema-store/pom.xml
+++ b/schema-store/pom.xml
@@ -39,7 +39,7 @@
          <version>0.9.0</version>
       </dependency>
       <dependency>
-         <groupId>lang.taxi</groupId>
+         <groupId>org.taxilang</groupId>
          <artifactId>compiler</artifactId>
          <exclusions>
             <exclusion>
