--- a/vyne-query-api/pom.xml
+++ b/vyne-query-api/pom.xml
@@ -18,7 +18,7 @@
          <version>${project.version}</version>
       </dependency>
       <dependency>
-         <groupId>lang.taxi</groupId>
+         <groupId>org.taxilang</groupId>
          <artifactId>core-types</artifactId>
          <version>${taxi.version}</version>
       </dependency>
