Extend aggregation support

--- a/cask/pom.xml
+++ b/cask/pom.xml
@@ -61,12 +61,12 @@
        </dependency>
 
         <dependency>
-            <groupId>lang.taxi</groupId>
+            <groupId>org.taxilang</groupId>
             <artifactId>compiler</artifactId>
             <version>${taxi.version}</version>
         </dependency>
        <dependency>
-          <groupId>lang.taxi</groupId>
+          <groupId>org.taxilang</groupId>
           <artifactId>taxi-writer</artifactId>
           <version>${taxi.version}</version>
        </dependency>
