--- a/vyne-query-service/pom.xml
+++ b/vyne-query-service/pom.xml
@@ -11,15 +11,14 @@
    <artifactId>vyne-query-service</artifactId>
 
    <properties>
-      <taxi-lsp.version>0.1.0-SNAPSHOT</taxi-lsp.version>
       <buildNumber>0</buildNumber>
    </properties>
 
    <dependencies>
       <dependency>
-         <groupId>lang.taxi</groupId>
+         <groupId>org.taxilang</groupId>
          <artifactId>taxi-lang-service</artifactId>
-         <version>${taxi-lsp.version}</version>
+         <version>${taxi.version}</version>
       </dependency>
       <dependency>
          <groupId>io.vyne</groupId>
