--- a/vyne-query-service/src/main/web/package.json
+++ b/vyne-query-service/src/main/web/package.json
@@ -27,14 +27,15 @@
     "@angular/platform-browser": "^8.2.9",
     "@angular/platform-browser-dynamic": "^8.2.9",
     "@angular/platform-server": "^8.2.9",
-    "@materia-ui/ngx-monaco-editor": "^2.0.7",
     "@angular/router": "^8.2.9",
     "@covalent/core": "^2.0.1",
     "@covalent/dynamic-forms": "^2.0.1",
     "@covalent/highlight": "^2.1.1",
+    "@materia-ui/ngx-monaco-editor": "^2.0.7",
     "@ng-bootstrap/ng-bootstrap": "^5.3.0",
     "@ng-select/ng-select": "^3.7.3",
     "@stomp/ng2-stompjs": "^7.2.0",
+    "@swimlane/ngx-charts": "^18.0.1",
     "@swimlane/ngx-graph": "^5.5.0",
     "@types/angular": "^1.7.0",
     "ag-grid-angular": "^23.2.1",
