--- a/data-quality-hub/pom.xml
+++ b/data-quality-hub/pom.xml
@@ -5,13 +5,17 @@
    <parent>
       <artifactId>platform</artifactId>
       <groupId>io.vyne</groupId>
-      <version>0.17.0-SNAPSHOT</version>
+      <version>0.17.1-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
 
    <artifactId>data-quality-hub</artifactId>
 
    <dependencies>
+      <dependency>
+         <groupId>org.springframework.cloud</groupId>
+         <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+      </dependency>
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>data-quality</artifactId>
@@ -30,5 +34,14 @@
          <artifactId>h2</artifactId>
       </dependency>
    </dependencies>
+
+   <build>
+      <plugins>
+         <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+         </plugin>
+      </plugins>
+   </build>
 
 </project>
