--- a/data-quality-hub/src/main/resources/application.yml
+++ b/data-quality-hub/src/main/resources/application.yml
@@ -21,3 +21,4 @@ eureka:
    instance:
       leaseRenewalIntervalInSeconds: 2
       leaseExpirationDurationInSeconds: 5
+logging.level.org.zalando.logbook: TRACE
