--- a/cask/pom.xml
+++ b/cask/pom.xml
@@ -42,6 +42,10 @@
          <artifactId>data-quality</artifactId>
          <version>${project.version}</version>
       </dependency>
+      <dependency>
+         <groupId>com.fasterxml.jackson.datatype</groupId>
+         <artifactId>jackson-datatype-jsr310</artifactId>
+      </dependency>
 
       <dependency>
          <groupId>org.springframework.cloud</groupId>
