--- a/data-quality-hub/pom.xml
+++ b/data-quality-hub/pom.xml
@@ -13,6 +13,11 @@
 
    <dependencies>
       <dependency>
+         <groupId>org.zalando</groupId>
+         <artifactId>logbook-spring-boot-starter</artifactId>
+         <version>2.9.0</version>
+      </dependency>
+      <dependency>
          <groupId>org.springframework.cloud</groupId>
          <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
       </dependency>
