--- a/vyne-query-service/pom.xml
+++ b/vyne-query-service/pom.xml
@@ -193,6 +193,12 @@
          <artifactId>turbine-jvm</artifactId>
          <scope>test</scope>
       </dependency>
+       <dependency>
+           <groupId>com.jayway.awaitility</groupId>
+           <artifactId>awaitility</artifactId>
+           <version>1.7.0</version>
+           <scope>test</scope>
+       </dependency>
 
    </dependencies>
 
