--- a/data-quality-hub/pom.xml
+++ b/data-quality-hub/pom.xml
@@ -12,11 +12,11 @@
    <artifactId>data-quality-hub</artifactId>
 
    <dependencies>
-      <dependency>
-         <groupId>org.zalando</groupId>
-         <artifactId>logbook-spring-boot-starter</artifactId>
-         <version>2.9.0</version>
-      </dependency>
+<!--      <dependency>-->
+<!--         <groupId>org.zalando</groupId>-->
+<!--         <artifactId>logbook-spring-boot-starter</artifactId>-->
+<!--         <version>2.9.0</version>-->
+<!--      </dependency>-->
       <dependency>
          <groupId>org.springframework.cloud</groupId>
          <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
