Reenabled OAuth2 Resource server profile

--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
       <module>pipelines</module>
       <module>cask-api</module>
       <module>test-cli</module>
-      <!-- module>jwt-auth-server</module -->
+      <module>jwt-auth-server</module>
       <module>test-containers</module>
    </modules>
 
