--- a/vyne-client-spring/pom.xml
+++ b/vyne-client-spring/pom.xml
@@ -3,7 +3,7 @@
    <parent>
       <artifactId>platform</artifactId>
       <groupId>io.vyne</groupId>
-      <version>0.17.3</version>
+      <version>0.17.3.1-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
 
