--- a/vyne-query-service/src/main/web/package.json
+++ b/vyne-query-service/src/main/web/package.json
@@ -35,7 +35,6 @@
     "@ng-bootstrap/ng-bootstrap": "^5.3.0",
     "@ng-select/ng-select": "^3.7.3",
     "@stomp/ng2-stompjs": "^7.2.0",
-    "@swimlane/ngx-charts": "^12.1.0",
     "@swimlane/ngx-graph": "^5.5.0",
     "@types/angular": "^1.7.0",
     "ag-grid-angular": "^23.2.1",
@@ -103,10 +102,10 @@
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "^3.4.5",
+    "typescript": "~3.4.5",
     "webpack-bundle-analyzer": "^3.8.0"
   },
   "peerDependencies": {
-    "typescript": "3.4.5"
+    "typescript": "~3.4.5"
   }
 }
