fix version info not shown in the UI.  actuator now at `/api/actuator`.
fixes LENS-593

--- a/vyne-query-service/src/main/resources/application.yml
+++ b/vyne-query-service/src/main/resources/application.yml
@@ -93,4 +93,4 @@ eureka:
       leaseRenewalIntervalInSeconds: 2
       leaseExpirationDurationInSeconds: 5
 
-
+management.endpoints.web.base-path: /api/actuator
