--- a/vyne-query-service/pom.xml
+++ b/vyne-query-service/pom.xml
@@ -69,6 +69,10 @@
          <artifactId>spring-boot-starter-security</artifactId>
       </dependency>
       <dependency>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-starter-actuator</artifactId>
+      </dependency>
+      <dependency>
          <groupId>org.springframework.security</groupId>
          <artifactId>spring-security-oauth2-resource-server</artifactId>
       </dependency>
@@ -199,6 +203,9 @@
            <version>1.7.0</version>
            <scope>test</scope>
        </dependency>
+
+      <!-- Monitoring and reporting -->
+
 
    </dependencies>
 
