Add prometheus to class path

--- a/vyne-query-service/pom.xml
+++ b/vyne-query-service/pom.xml
@@ -205,6 +205,10 @@
        </dependency>
 
       <!-- Monitoring and reporting -->
+      <dependency>
+         <groupId>io.micrometer</groupId>
+         <artifactId>micrometer-registry-prometheus</artifactId>
+      </dependency>
 
 
    </dependencies>
