--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -19,6 +19,7 @@
       <dependency>
          <groupId>io.projectreactor</groupId>
          <artifactId>reactor-core</artifactId>
+         <version>3.4.4</version>
       </dependency>
    </dependencies>
 
