configiured actuator for cask on /api/actuator

--- a/cask/src/main/resources/application.yml
+++ b/cask/src/main/resources/application.yml
@@ -80,6 +80,8 @@ cask:
 
 # Actuators + prometheus metrics configuration
 
+management.endpoints.web.base-path: /api/actuator
+
 management:
    metrics:
       export:
