Added meter registry to schema compilation

--- a/vyne-query-service/pom.xml
+++ b/vyne-query-service/pom.xml
@@ -205,6 +205,12 @@
        </dependency>
 
       <!-- Monitoring and reporting -->
+
+      <dependency>
+         <groupId>io.micrometer</groupId>
+         <artifactId>micrometer-core</artifactId>
+      </dependency>
+
       <dependency>
          <groupId>io.micrometer</groupId>
          <artifactId>micrometer-registry-prometheus</artifactId>
