--- a/vyne/pom.xml
+++ b/vyne/pom.xml
@@ -116,6 +116,11 @@
          <scope>test</scope>
       </dependency>
 
+      <dependency>
+         <groupId>io.micrometer</groupId>
+         <artifactId>micrometer-core</artifactId>
+      </dependency>
+
 
    </dependencies>
    <build>
