--- a/pipelines/pipeline-runner-core/pom.xml
+++ b/pipelines/pipeline-runner-core/pom.xml
@@ -5,7 +5,7 @@
    <parent>
       <artifactId>pipelines</artifactId>
       <groupId>io.vyne</groupId>
-      <version>0.18.1</version>
+      <version>0.18.2-SNAPSHOT</version>
    </parent>
    <packaging>jar</packaging>
    <modelVersion>4.0.0</modelVersion>
