--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,62 +21,6 @@ stages:
    - deploy
    - release
 
-build-jvm:
-   stage: build
-   except:
-      - tags
-      - develop
-      - release/0.18.x
-   cache:
-      paths:
-         - .m2/repository
-      key: "maven-$CI_COMMIT_REF_SLUG"
-   script:
-      - 'if [ -z "${GITLAB_TOKEN}" ]; then echo "var is blank"; else echo "var is set"; fi'
-      - 'if [ -z "${CI_SERVER_HOST}" ]; then echo "var is blank"; else echo "var is set"; fi'
-      - 'if [ -z "${CI_PROJECT_PATH}" ]; then echo "var is blank"; else echo "var is set"; fi'
-      - 'mvn $MAVEN_CLI_OPTS clean install -Dskip.npm -PrunBenchmarkTests'
-   artifacts:
-      paths:
-         - "*/target"
-         -  "test-cli/target/*.zip"
-      expire_in: 1 hours
-      reports:
-         junit:
-            # Note:This won't actually work, b/c of https://gitlab.com/gitlab-org/gitlab-runner/issues/2620
-            # However, leaving this here to pick up later
-            - "*/target/surefire-reports/TEST-*.xml"
-
-build-ui:
-   stage: build
-   except:
-      - tags
-      - develop
-      - release/0.18.x
-   cache:
-      paths:
-         - vyne-query-service/src/main/web/node
-      key: "node-$CI_COMMIT_REF_SLUG"
-   script:
-      # Only build the frontend. Nothing JVM related
-      - 'mvn $MAVEN_CLI_OPTS -DskipTests frontend:install-node-and-npm frontend:npm@run-npm-install frontend:npm@ng-build -f vyne-query-service/pom.xml'
-   artifacts:
-      paths:
-         - "vyne-query-service/target/classes/static"
-      expire_in: 1 hours
-
-build-publish-snapshot:
-   resource_group: docker_release
-   stage: deploy
-   script:
-      - docker login -u vynecd -p $DOCKER_HUB_PASSWORD
-      - 'mvn $MAVEN_CLI_OPTS -DskipTests clean deploy -DbuildNumber=$CI_BUILD_ID -P snapshot-release'
-   only:
-      - develop
-   artifacts:
-      paths:
-         - "test-cli/target/*.zip"
-
 build-publish-release:
    resource_group: docker_release
    stage: deploy
@@ -84,7 +28,7 @@ build-publish-release:
       - docker login -u vynecd -p $DOCKER_HUB_PASSWORD
       - 'mvn $MAVEN_CLI_OPTS -DskipTests clean deploy -P release'
    only:
-      - release/0.18.x
+      - release/0.18.3
    artifacts:
       paths:
          - "test-cli/target/*.zip"
