--- a/cask/pom.xml
+++ b/cask/pom.xml
@@ -73,7 +73,12 @@
           <artifactId>micrometer-registry-prometheus</artifactId>
        </dependency>
 
-        <dependency>
+       <dependency>
+          <groupId>org.springframework.kafka</groupId>
+          <artifactId>spring-kafka</artifactId>
+       </dependency>
+
+       <dependency>
             <groupId>org.taxilang</groupId>
             <artifactId>compiler</artifactId>
             <version>${taxi.version}</version>
@@ -174,6 +179,11 @@
           <groupId>org.skyscreamer</groupId>
           <artifactId>jsonassert</artifactId>
           <version>1.5.0</version>
+          <scope>test</scope>
+       </dependency>
+       <dependency>
+          <groupId>org.springframework.kafka</groupId>
+          <artifactId>spring-kafka-test</artifactId>
           <scope>test</scope>
        </dependency>
         <dependency>
